--- a/app/src/main/res/layout/buy_and_sell_home_fragment.xml
+++ b/app/src/main/res/layout/buy_and_sell_home_fragment.xml
@@ -3,7 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:background="@drawable/ic_medium_bg"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_orders_home"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="@android:color/transparent"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <EditText
         android:id="@+id/etxt_search"
@@ -20,7 +33,7 @@
         android:hint="Search for Items"
         android:inputType="textPersonName"
         android:padding="10dp"
-        android:elevation="5dp"/>
+        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_1"
         android:layout_width="match_parent"
@@ -32,15 +45,14 @@
         android:background="@drawable/background_round_white"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:visibility="visible"
-        android:elevation="5dp">
+        android:visibility="visible">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_account_opening"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@id/layout_loan_app"
-            app:layout_constraintEnd_toStartOf="@id/layout_deposits"
+            app:layout_constraintEnd_toStartOf="@id/layout_fertilizers"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="openAgentCustomerAccountOpening">
@@ -76,7 +88,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_deposits"
+            android:id="@+id/layout_fertilizers"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toStartOf="@id/layout_funds_transfers"
@@ -86,7 +98,7 @@
             android:onClick="openAgentCustomerDeposit">
 
             <ImageView
-                android:id="@+id/image_deposits"
+                android:id="@+id/image_fertilizers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -110,7 +122,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_deposits" />
+                app:layout_constraintTop_toBottomOf="@id/image_fertilizers" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -119,7 +131,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/layout_deposits"
+            app:layout_constraintStart_toEndOf="@id/layout_fertilizers"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/layout_balance_inquiry"
             android:onClick="openAgentCustomerFundsTransfer">
@@ -160,7 +172,7 @@
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/layout_deposits"
+            app:layout_constraintEnd_toStartOf="@id/layout_fertilizers"
             app:layout_constraintTop_toBottomOf="@id/layout_account_opening">
 
             <ImageView
@@ -198,7 +210,7 @@
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/layout_loan_app"
-            app:layout_constraintTop_toBottomOf="@id/layout_deposits"
+            app:layout_constraintTop_toBottomOf="@id/layout_fertilizers"
             app:layout_constraintEnd_toStartOf="@id/layout_balance_inquiry"
             android:onClick="openAgentCustomerWithdraw">
 
@@ -341,18 +353,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:layout_below="@id/btn_view_all_deals"/>
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="190dp"
-        android:background="@drawable/ic_medium_bg"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_orders_home"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:background="@android:color/transparent"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
 </RelativeLayout>
