--- a/app/src/main/res/layout/buy_inputs_categories.xml
+++ b/app/src/main/res/layout/buy_inputs_categories.xml
@@ -5,7 +5,7 @@
     android:id="@+id/scroll_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_round_white">
+    android:background="@android:color/transparent">
 
 
         <TextView
@@ -26,7 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/categories_header"
-
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:elevation="5dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
