--- a/app/src/main/res/layout/orders_home.xml
+++ b/app/src/main/res/layout/orders_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="44dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="?actionBarSize"
         android:background="@drawable/edittext_corner"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,9 +62,8 @@
         android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="10dp"
+        android:background="@drawable/background_round_white"
+        android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -115,8 +114,8 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler"
+        <FrameLayout
+            android:id="@+id/layout_most_popular"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_view_all_most_popular"
@@ -126,7 +125,7 @@
             android:id="@+id/label_deals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/recycler"
+            android:layout_below="@id/layout_most_popular"
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:text="Deals"
@@ -138,7 +137,7 @@
             android:id="@+id/btn_view_all_deals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/recycler"
+            android:layout_below="@+id/layout_most_popular"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
@@ -153,8 +152,8 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler2"
+        <FrameLayout
+            android:id="@+id/layout_deals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_view_all_deals"
@@ -163,7 +162,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="200dp"
         android:background="@drawable/ic_medium_bg"
         android:theme="@style/AppTheme.AppBarOverlay">
 
