--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         app:labelVisibilityMode="labeled"
+        app:itemRippleColor="@color/gray_gray"
         app:itemIconTint="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
