--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,6 +6,7 @@
         android:enabled="true"
         android:icon="@drawable/home"
         android:title="HOME"
+        android:titleCondensed="Home"
         app:showAsAction="ifRoom" />
 
 
@@ -23,6 +24,12 @@
         android:icon="@drawable/ic_buy_sell"
         android:title="BUY &amp; SELL"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/walletCardsFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_accept"
+        android:title="CARD"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/walletAccountFragment"
@@ -37,82 +44,9 @@
 <!--        android:title="Settlement"-->
 <!--        app:showAsAction="ifRoom"-->
 <!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletAcceptPaymentFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_accept"-->
-<!--        android:title="Accept Payment"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletShopFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_accept"-->
-<!--        android:title="Shop"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
 
-<!--    <item-->
-<!--        android:id="@+id/walletProductsFragment"-->
-<!--        android:enabled="true"-->
-<!--        android:icon="@drawable/ic_product"-->
-<!--        android:title="Products"-->
-<!--        app:showAsAction="ifRoom" />-->
-<!--    <item-->
-<!--        android:id="@+id/walletOrdersFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_orders"-->
-<!--        android:title="Orders"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletPOSFragment"-->
-<!--        android:enabled="true"-->
-<!--        android:icon="@drawable/ic_pos"-->
-<!--        android:title="POS"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletSalesFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_pos"-->
-<!--        android:title="Sales"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletCardsFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_accept"-->
-<!--        android:title="Cards"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletBuyFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_home"-->
-<!--        android:title="Buy"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletSellFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_sell"-->
-<!--        android:title="Sell"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletAddressesFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_accept"-->
-<!--        android:title="Addresses"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
-<!--    <item-->
-<!--        android:id="@+id/walletCartFragment"-->
-<!--        android:enabled="false"-->
-<!--        android:icon="@drawable/ic_shopping_cart"-->
-<!--        android:title="Cart"-->
-<!--        app:showAsAction="ifRoom"-->
-<!--        android:visible="false"/>-->
+
+
+
 
 </menu>
