--- a/app/src/main/res/layout/fragment_add_beneficiary.xml
+++ b/app/src/main/res/layout/fragment_add_beneficiary.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_background"
     android:orientation="vertical"
-    tools:context=".DailogFragments.AddBeneficiaryFragment">
+    tools:context=".DailogFragments.AddBeneficiary">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -111,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -209,61 +209,7 @@
 
 
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="5dp">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Street Address 1"
-                        android:textSize="16sp"
-                        android:layout_marginBottom="5dp" />
-
-                    <EditText
-                        android:id="@+id/et_street_address_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:paddingStart="@dimen/dimen_10dp"
-                        android:background="@drawable/outline_primary"
-                        android:inputType="text"
-                        android:textColor="@color/textColor"/>
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginStart="5dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Street Address 2"
-                        android:textSize="16sp"
-                        android:layout_marginBottom="5dp" />
-
-                    <EditText
-                        android:id="@+id/et_street_address_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:paddingStart="@dimen/dimen_10dp"
-                        android:background="@drawable/outline_primary"
-                        android:inputType="text"
-                        android:textColor="@color/textColor"/>
-
-                </LinearLayout>
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
