--- a/app/src/main/res/layout/layout_getting_started.xml
+++ b/app/src/main/res/layout/layout_getting_started.xml
@@ -38,7 +38,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.06" />
+                        app:layout_constraintGuide_percent="0.07" />
 
 
                     <androidx.constraintlayout.widget.Guideline
@@ -46,13 +46,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.23" />
+                        app:layout_constraintGuide_percent="0.27" />
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.35" />
+                        app:layout_constraintGuide_percent="0.39" />
 
 
                     <androidx.constraintlayout.widget.Guideline
@@ -60,25 +60,37 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.65" />
+                        app:layout_constraintGuide_percent="0.69" />
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.71" />
+                        app:layout_constraintGuide_percent="0.75" />
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline55"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintGuide_percent="0.78" />
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.81" />
+                        app:layout_constraintGuide_percent="0.85" />
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline66"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintGuide_percent="0.87" />
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:layout_constraintGuide_percent="0.86" />
+                        app:layout_constraintGuide_percent="0.9" />
 
                     <ImageView
                         android:id="@+id/logo"
@@ -86,6 +98,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="10dp"
                         app:layout_constraintTop_toTopOf="@id/guideline1"
                         app:layout_constraintBottom_toTopOf="@id/guideline2"/>
 
@@ -96,30 +109,44 @@
                         app:layout_constraintTop_toBottomOf="@id/guideline2"
                         app:layout_constraintBottom_toTopOf="@id/guideline3">
 
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guideline10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintGuide_percent="0"/>
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guideline11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            app:layout_constraintGuide_percent="0.4"/>
                         <TextView
                             android:id="@+id/logo_title1"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:text="W E L C O M E   T O"
+                            android:text="W E L C O M E   T O "
                             android:textColor="@color/colorPrimaryDark"
-                            android:textSize="18sp"
-                            android:gravity="bottom"
-                            app:layout_constraintBottom_toTopOf="@id/logo_title"
+                            android:textAlignment="center"
+                            app:autoSizeTextType="uniform"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintBottom_toTopOf="@id/guideline11"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"/>
+                            app:layout_constraintTop_toBottomOf="@id/guideline10"/>
                         <TextView
                             android:id="@+id/logo_title"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:text="eMaisha Pay"
+                            android:textAlignment="center"
+                            app:autoSizeTextType="uniform"
                             android:textColor="@color/colorPrimaryDark"
-                            android:textSize="30sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/logo_title1"/>
+                            app:layout_constraintTop_toBottomOf="@id/guideline11"/>
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -155,8 +182,7 @@
                     <Button
                         android:id="@+id/get_started_btn"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
+                        android:layout_height="0dp"
                         android:layout_marginStart="25dp"
                         android:layout_marginEnd="25dp"
                         android:background="@drawable/round_button_dark_green"
@@ -164,39 +190,42 @@
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textAllCaps="false"
-                        app:layout_constraintTop_toBottomOf="@id/guideline5"
+                        app:layout_constraintTop_toBottomOf="@id/guideline55"
                         app:layout_constraintBottom_toTopOf="@id/guideline6"/>
 
-                    <RelativeLayout
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/layout_signin"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        app:layout_constraintTop_toBottomOf="@id/guideline6"
+                        app:layout_constraintTop_toBottomOf="@id/guideline66"
                         app:layout_constraintBottom_toTopOf="@id/guideline7"
                         android:gravity="center"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginTop="15dp">
+                        app:layout_constraintEnd_toEndOf="parent">
                         <TextView
                             android:id="@+id/signin1"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="0dp"
                             android:text="Already have account? "
-                            android:textSize="14sp"
+                            android:textAlignment="viewEnd"
+                            app:autoSizeTextType="uniform"
                             android:textColor="@color/colorPrimaryDark"
                             android:textStyle="bold"
-                            android:gravity="center"/>
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"/>
                         <TextView
                             android:id="@+id/signin2"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="0dp"
                             android:text=" Sign in "
-                            android:textSize="14sp"
+                            app:autoSizeTextType="uniform"
                             android:textColor="#fff"
                             android:textStyle="bold"
                             android:layout_toEndOf="@id/signin1"
-                            android:gravity="center"/>
-                    </RelativeLayout>
+                            app:layout_constraintStart_toEndOf="@id/signin1"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
