--- a/app/src/main/res/layout/fragment_online_order_details.xml
+++ b/app/src/main/res/layout/fragment_online_order_details.xml
@@ -376,7 +376,48 @@
 
 
         </LinearLayout>
+             <LinearLayout
+                 android:id="@+id/cancel_delivered_layout"
+                 android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 android:layout_weight="1"
+                 android:orientation="horizontal"
+                 android:weightSum="4"
+                 android:layout_margin="15dp"
+                 android:visibility="gone">
 
+
+                 <TextView
+                     android:id="@+id/txt_cancel_online"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_marginLeft="10dp"
+                     android:layout_marginRight="10dp"
+                     android:layout_weight="2"
+                     android:background="@drawable/rectangular_blue_solid"
+                     android:gravity="center"
+                     android:padding="12dp"
+                     android:text="Cancel"
+                     android:textColor="#fff"
+                     android:textSize="16dp"
+                     android:textStyle="bold" />
+                 <TextView
+                     android:id="@+id/txt_delivered_online"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_marginLeft="10dp"
+                     android:layout_marginRight="10dp"
+                     android:layout_weight="2"
+                     android:background="@drawable/rectangular_blue_solid"
+                     android:gravity="center"
+                     android:padding="12dp"
+                     android:text="Delivered"
+                     android:textColor="#ffffff"
+                     android:textSize="16sp"
+                     android:textStyle="bold" />
+
+
+             </LinearLayout>
 
     </LinearLayout>
 
