--- a/app/src/main/res/layout/buy_inputs_orders.xml
+++ b/app/src/main/res/layout/buy_inputs_orders.xml
@@ -18,6 +18,7 @@
             android:id="@+id/toolbar_orders"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_chevron_left_white"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
