--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -165,7 +165,7 @@
                 android:id="@+id/text_view_change_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Change Number"
+                android:text="Back"
                 android:textColor="@color/colorPrimary"
                 android:layout_margin="5dp"
                 android:layout_alignParentEnd="true"/>
